K1J-1447: Update old code by removing deprecated usage and cleaning up